@@ -15,13 +15,11 @@
 */
 package megamek.server;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.Hashtable;
 import java.util.List;
+import java.util.Map;
 import java.util.Vector;
 
 import megamek.common.*;
@@ -48,7 +46,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
         game = gameManager.getGame();
         this.vPhaseReport = vPhaseReport;
         removeSmokeTerrainFromHexes();
-        resolveFire();
+        game.getBoardIds().forEach(this::resolveFire);
         reapplySmokeTerrain();
         this.vPhaseReport = null;
     }
@@ -60,24 +58,27 @@ public class FireProcessor extends DynamicTerrainProcessor {
      * longer determined by level but is rather a characteristic of the hex.
      * Level now denotes standard and inferno fires.
      */
-    private void resolveFire() {
-        Board board = game.getBoard();
+    private void resolveFire(int boardId) {
+        Board board = game.getBoard(boardId);
+        if (board.isLowAltitude() || board.isSpace()) {
+            return;
+        }
         int width = board.getWidth();
         int height = board.getHeight();
         WindDirection windDirection = game.getPlanetaryConditions().getWindDirection();
         Wind windStrength = game.getPlanetaryConditions().getWind();
 
         // Get the position map of all entities in the game.
-        Hashtable<Coords, Vector<Entity>> positionMap = game.getPositionMap();
+        Map<BoardLocation, List<Entity>> positionMap = game.getPositionMapMulti();
 
         // process smoke FIRST, before any fires spread or
         // smoke is produced.
-        resolveSmoke();
+        resolveSmoke(boardId);
 
         // Cycle through all buildings, checking for fire.
         // ASSUMPTION: buildings don't lose 2 CF on the turn a fire starts.
         // ASSUMPTION: multi-hex buildings lose 2 CF in each burning hex
-        Enumeration<Building> buildings = game.getBoard().getBuildings();
+        Enumeration<Building> buildings = board.getBuildings();
         while (buildings.hasMoreElements()) {
             Building bldg = buildings.nextElement();
             Enumeration<Coords> bldgCoords = bldg.getCoords();
@@ -120,7 +121,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                         if ((currentHex.containsTerrain(Terrains.WOODS)
                                 || currentHex.containsTerrain(Terrains.JUNGLE))
                                 && game.getOptions().booleanOption(OptionsConstants.ADVANCED_WOODS_BURN_DOWN)) {
-                            burnReports = burnDownWoods(currentCoords);
+                            burnReports = burnDownWoods(currentCoords, board);
                         }
                         // report and check for fire spread
                         boolean isInferno = (currentHex.terrainLevel(Terrains.FIRE) == Terrains.FIRE_LVL_INFERNO)
@@ -131,7 +132,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                         if (burnReports != null) {
                             vPhaseReport.addAll(burnReports);
                         }
-                        spreadFire(currentXCoord, currentYCoord, windDirection, windStrength);
+                        spreadFire(board, currentXCoord, currentYCoord, windDirection, windStrength);
                     }
                 }
             }
@@ -146,7 +147,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                 Hex currentHex = board.getHex(currentXCoord, currentYCoord);
 
                 if (currentHex.containsTerrain(Terrains.FIRE)) {
-                    Building bldg = game.getBoard().getBuildingAt(currentCoords);
+                    Building bldg = board.getBuildingAt(currentCoords);
                     // Was the fire started this turn?
                     if (currentHex.getFireTurn() == 0) {
                         // Report fire started this round
@@ -159,7 +160,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                     }
 
                     // Check for any explosions
-                    gameManager.checkExplodeIndustrialZone(currentCoords, vPhaseReport);
+                    gameManager.checkExplodeIndustrialZone(currentCoords, boardId, vPhaseReport);
 
                     // Add smoke, unless tornado or optional rules
                     boolean containsForest = (currentHex.containsTerrain(Terrains.WOODS)
@@ -176,19 +177,19 @@ public class FireProcessor extends DynamicTerrainProcessor {
                         smokeList.add(currentCoords.translated(windDirection.rotateClockwise().ordinal()));
                         smokeList.add(currentCoords.translated(windDirection.rotateCounterClockwise().ordinal()));
 
-                        gameManager.addSmoke(smokeList, windDirection.ordinal(), bInferno);
+                        gameManager.addSmoke(smokeList, board, bInferno);
                         board.initializeAround(currentXCoord, currentYCoord);
                     }
 
                     // increment the fire turn counter
                     currentHex.incrementFireTurn();
-                    gameManager.getHexUpdateSet().add(currentCoords);
+                    markHexUpdate(currentCoords, boardId);
                 }
             }
         }
     }
 
-    public Vector<Report> burnDownWoods(Coords coords) {
+    public Vector<Report> burnDownWoods(Coords coords, Board board) {
         Vector<Report> burnReports = new Vector<>();
         int burnDamage = 5;
         try {
@@ -200,7 +201,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
         // Report that damage applied to terrain
         burnReports.addElement(Report.publicReport(3383).indent().add(burnDamage));
 
-        Vector<Report> newReports = gameManager.tryClearHex(coords, burnDamage, Entity.NONE);
+        Vector<Report> newReports = gameManager.tryClearHex(coords, board.getBoardId(), burnDamage, Entity.NONE);
         for (Report nr : newReports) {
             nr.indent(2);
         }
@@ -211,7 +212,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
     /**
      * Spreads the fire around the specified coordinates.
      */
-    public void spreadFire(int x, int y, WindDirection windDir, Wind windStr) {
+    public void spreadFire(Board board, int x, int y, WindDirection windDir, Wind windStr) {
         Coords src = new Coords(x, y);
         Coords nextCoords = src.translated(windDir.ordinal());
 
@@ -222,7 +223,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
         // to
         // a level 1 building at base level 0, for example.
 
-        final int curHeight = game.getBoard().getHex(src).ceiling();
+        final int curHeight = board.getHex(src).ceiling();
 
         TargetRoll directroll = new TargetRoll(9, "spread downwind");
         TargetRoll obliqueroll = new TargetRoll(11, "spread 60 degrees to downwind");
@@ -236,25 +237,25 @@ public class FireProcessor extends DynamicTerrainProcessor {
             directroll.addModifier(-2, "strong gale+");
         }
 
-        spreadFire(src, nextCoords, directroll, curHeight);
+        spreadFire(board, src, nextCoords, directroll, curHeight);
 
         // Spread to the next hex downwind on a 12 if the first hex wasn't
         // burning...
         // unless a higher hex intervenes
-        Hex nextHex = game.getBoard().getHex(nextCoords);
-        Hex jumpHex = game.getBoard().getHex(nextCoords.translated(windDir.ordinal()));
+        Hex nextHex = board.getHex(nextCoords);
+        Hex jumpHex = board.getHex(nextCoords.translated(windDir.ordinal()));
         if ((nextHex != null) && (jumpHex != null) && !(nextHex.containsTerrain(Terrains.FIRE))
                 && ((curHeight >= nextHex.ceiling()) || (jumpHex.ceiling() >= nextHex.ceiling()))) {
             // we've already gone one step in the wind direction, now go another
             directroll.addModifier(3, "crossing non-burning hex");
-            spreadFire(src, nextCoords.translated(windDir.ordinal()), directroll, curHeight);
+            spreadFire(board, src, nextCoords.translated(windDir.ordinal()), directroll, curHeight);
         }
 
         // spread fire 60 degrees clockwise....
-        spreadFire(src, src.translated(windDir.rotateClockwise().ordinal()), obliqueroll, curHeight);
+        spreadFire(board, src, src.translated(windDir.rotateClockwise().ordinal()), obliqueroll, curHeight);
 
         // spread fire 60 degrees counterclockwise
-        spreadFire(src, src.translated(windDir.rotateCounterClockwise().ordinal()), obliqueroll, curHeight);
+        spreadFire(board, src, src.translated(windDir.rotateCounterClockwise().ordinal()), obliqueroll, curHeight);
     }
 
     /**
@@ -266,22 +267,22 @@ public class FireProcessor extends DynamicTerrainProcessor {
      * @param roll   the target number for roll for fire to spread
      * @param height the height of the origin hex
      */
-    public void spreadFire(final Coords origin, final Coords coords, final TargetRoll roll,
-            final int height) {
-        Hex hex = game.getBoard().getHex(coords);
+    public void spreadFire(Board board, Coords origin, Coords coords, final TargetRoll roll,
+            int height) {
+        Hex hex = board.getHex(coords);
         if ((hex == null) || (Math.abs(hex.ceiling() - height) > 4)) {
             // Don't attempt to spread fire off the board or for large differences in height
             return;
         }
 
-        if (!(hex.containsTerrain(Terrains.FIRE)) && gameManager.checkIgnition(coords, roll)) {
+        if (!(hex.containsTerrain(Terrains.FIRE)) && gameManager.checkIgnition(coords, board.getBoardId(), roll)) {
             vPhaseReport.addElement(Report.publicReport(5150).add(coords.getBoardNum()).add(origin.getBoardNum()));
         }
     }
 
     /** Processes smoke drift and dissipation. */
-    private void resolveSmoke() {
-        final Board board = game.getBoard();
+    private void resolveSmoke(int boardId) {
+        final Board board = game.getBoard(boardId);
         final WindDirection windDir = game.getPlanetaryConditions().getWindDirection();
         PlanetaryConditions conditions = game.getPlanetaryConditions();
         Wind windStr = game.getPlanetaryConditions().getWind();
@@ -297,11 +298,11 @@ public class FireProcessor extends DynamicTerrainProcessor {
 
         // Process smoke drifting
         for (SmokeCloud cloud : preExistingSmokeClouds()) {
-            gameManager.getHexUpdateSet().addAll(cloud.getCoordsList());
+            markHexUpdate(cloud.getCoordsList(), boardId);
 
             final ArrayList<Coords> replacementHexes = new ArrayList<>();
             for (Coords currentCoords : cloud.getCoordsList()) {
-                Coords smokeCoords = driftAddSmoke(currentCoords, windDir, windStr);
+                Coords smokeCoords = driftAddSmoke(currentCoords, board, windDir, windStr);
                 if (smokeCoords == null) {
                     // Smoke has Dissipated by moving into a hex with a greater than 4 elevation
                     // drop.
@@ -341,22 +342,22 @@ public class FireProcessor extends DynamicTerrainProcessor {
     }
 
     /**
-     * (Re-)Applies smoke (Terrains.SMOKE) to all hexes of all smoke clouds and
-     * marks the hexes for client update.
+     * (Re-)Applies smoke (Terrains.SMOKE) to all hexes of all smoke clouds on all boards and marks the hexes for
+     * client update.
      */
     private void reapplySmokeTerrain() {
         for (SmokeCloud cloud : game.getSmokeCloudList()) {
             for (Coords coords : cloud.getCoordsList()) {
-                Hex smokeHex = gameManager.getGame().getBoard().getHex(coords);
+                Hex smokeHex = gameManager.getGame().getBoard(cloud.getBoardId()).getHex(coords);
                 if (smokeHex != null) {
                     if (smokeHex.containsTerrain(Terrains.SMOKE)) {
                         if (smokeHex.terrainLevel(Terrains.SMOKE) == SmokeCloud.SMOKE_LIGHT) {
                             smokeHex.addTerrain(new Terrain(Terrains.SMOKE, SmokeCloud.SMOKE_HEAVY));
-                            gameManager.getHexUpdateSet().add(coords);
+                            markHexUpdate(coords, cloud.getBoardId());
                         }
                     } else {
                         smokeHex.addTerrain(new Terrain(Terrains.SMOKE, cloud.getSmokeLevel()));
-                        gameManager.getHexUpdateSet().add(coords);
+                        markHexUpdate(coords, cloud.getBoardId());
                     }
                 }
             }
@@ -369,14 +370,16 @@ public class FireProcessor extends DynamicTerrainProcessor {
      */
     private List<SmokeCloud> preExistingSmokeClouds() {
         final int currentRound = gameManager.getGame().getRoundCount();
-        return gameManager.getSmokeCloudList().stream().filter(cloud -> currentRound != cloud.getRoundOfGeneration())
-                .collect(toList());
+        return gameManager.getSmokeCloudList().stream()
+                     .filter(cloud -> currentRound != cloud.getRoundOfGeneration())
+                     .toList();
     }
 
-    /** Removes smoke (Terrains.SMOKE) from all hexes of all smoke clouds. */
+    /** Removes smoke (Terrains.SMOKE) from all hexes of all smoke clouds on all boards. */
     private void removeSmokeTerrainFromHexes() {
         for (SmokeCloud cloud : game.getSmokeCloudList()) {
-            game.getBoard().getHexes(cloud.getCoordsList()).forEach(h -> h.removeTerrain(Terrains.SMOKE));
+            game.getBoard(cloud.getBoardId()).getHexes(cloud.getCoordsList())
+                  .forEach(h -> h.removeTerrain(Terrains.SMOKE));
         }
     }
 
@@ -390,31 +393,26 @@ public class FireProcessor extends DynamicTerrainProcessor {
      *         dissipates while on the
      *         board.
      */
-    public @Nullable Coords driftAddSmoke(final Coords source, final WindDirection windDirection,
+    public @Nullable Coords driftAddSmoke(final Coords source, Board board, final WindDirection windDirection,
             final Wind windStrength) {
-        return driftAddSmoke(source, windDirection, windStrength, 0);
+        return driftAddSmoke(source, board, windDirection, windStrength, 0);
     }
 
     /**
-     * Smoke cannot climb more than 4 hexes if the next hex is more than 4 in
-     * elevation then the
-     * smoke will try to go right. If it cannot go right it'll try to go left. If it
-     * cannot go left
-     * it'll stay put.
+     * Smoke cannot climb more than 4 hexes if the next hex is more than 4 in elevation then the smoke will try to go
+     * right. If it cannot go right it'll try to go left. If it cannot go left it'll stay put.
      *
      * @param src              the source coordinates
      * @param windDir          the wind's direction
      * @param windStr          the wind's strength
-     * @param directionChanges How many times the smoke has tried to change
-     *                         directions to get around an obstacle.
-     * @return the coordinates where the smoke has drifted to, or null if it
-     *         dissipates while on the
-     *         board.
+     * @param directionChanges How many times the smoke has tried to change directions to get around an obstacle.
+     *
+     * @return the coordinates where the smoke has drifted to, or null if it dissipates while on the board.
      */
-    public @Nullable Coords driftAddSmoke(final Coords src, final WindDirection windDir, final Wind windStr,
+    public @Nullable Coords driftAddSmoke(final Coords src, Board board, final WindDirection windDir,
+          final Wind windStr,
             final int directionChanges) {
         Coords nextCoords = src.translated(windDir.ordinal());
-        Board board = game.getBoard();
 
         // if the wind conditions are calm, then don't drift it
         if (windStr.isCalm()) {
@@ -454,10 +452,10 @@ public class FireProcessor extends DynamicTerrainProcessor {
         if ((hexElevation - nextElevation) < -4) {
             // Try Right
             if (directionChanges == 0) {
-                return driftAddSmoke(src, windDir.rotateClockwise(), windStr, directionChanges + 1);
+                return driftAddSmoke(src, board, windDir.rotateClockwise(), windStr, directionChanges + 1);
             } else if (directionChanges == 1) {
                 // Try Left
-                return driftAddSmoke(src, windDir.rotateCounterClockwise(), windStr, directionChanges + 1);
+                return driftAddSmoke(src, board, windDir.rotateCounterClockwise(), windStr, directionChanges + 1);
             } else {
                 // Stay put
                 return src;
@@ -466,7 +464,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
 
         // stronger wind causes smoke to drift farther
         if (windStr.isStrongerThan(Wind.MOD_GALE)) {
-            return driftAddSmoke(nextCoords, windDir, windStr.lowerWind());
+            return driftAddSmoke(nextCoords, board, windDir, windStr.lowerWind());
         }
 
         return nextCoords;
