@@ -18,81 +18,109 @@
  */
 package megamek.server.sbf;
 
-import megamek.common.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
+import megamek.common.AbstractGame;
+import megamek.common.Deployable;
+import megamek.common.InGameObject;
+import megamek.common.Player;
+import megamek.common.Team;
 import megamek.common.enums.GamePhase;
 import megamek.common.planetaryconditions.PlanetaryConditions;
-import megamek.common.strategicBattleSystems.*;
-
-import java.util.*;
-import java.util.stream.Collectors;
+import megamek.common.strategicBattleSystems.SBFFormation;
+import megamek.common.strategicBattleSystems.SBFFormationTurn;
+import megamek.common.strategicBattleSystems.SBFInitiativeRollReportEntry;
+import megamek.common.strategicBattleSystems.SBFPlayerNameReportEntry;
+import megamek.common.strategicBattleSystems.SBFPlayerTurn;
+import megamek.common.strategicBattleSystems.SBFPublicReportEntry;
+import megamek.common.strategicBattleSystems.SBFReportEntry;
+import megamek.common.strategicBattleSystems.SBFReportHeader;
+import megamek.common.strategicBattleSystems.SBFTurn;
 
 public record SBFInitiativeHelper(SBFGameManager gameManager) implements SBFGameManagerHelper {
 
     /**
-     * Determines the turn order for a given phase, setting the game's turn list and sending it to the
-     * Clients. Also resets the turn index.
+     * Determines the turn order for a given phase, setting the game's turn list and sending it to the Clients. Also
+     * resets the turn index.
      *
      * @param phase The phase to find the turns for
+     *
      * @see AbstractGame#resetTurnIndex()
      */
     void determineTurnOrder(GamePhase phase) {
         final List<SBFTurn> turns;
         if (phase.isDeployMinefields()) {
-            turns = game().getPlayersList().stream()
-                    .filter(Player::hasMinefields)
-                    .map(p -> new SBFPlayerTurn(p.getId()))
-                    .collect(Collectors.toList());
+            turns = game().getPlayersList()
+                          .stream()
+                          .filter(Player::hasMinefields)
+                          .map(p -> new SBFPlayerTurn(p.getId()))
+                          .collect(Collectors.toList());
 
         } else if (phase.isFiring()) {
-            turns = game().getInGameObjects().stream()
-                    .filter(unit -> unit instanceof SBFFormation)
-                    .filter(unit -> ((SBFFormation) unit).isDeployed()) //TODO roll into eligible!!! may be offboard
-                    .filter(unit -> ((SBFFormation) unit).isEligibleForPhase(phase))
-                    .map(InGameObject::getOwnerId)
-                    .map(SBFFormationTurn::new)
-                    .collect(Collectors.toList());
+            turns = game().getInGameObjects()
+                          .stream()
+                          .filter(unit -> unit instanceof SBFFormation)
+                          .filter(unit -> ((SBFFormation) unit).isDeployed()) //TODO roll into eligible!!! may be off board
+                          .filter(unit -> ((SBFFormation) unit).isEligibleForPhase(phase))
+                          .map(InGameObject::getOwnerId)
+                          .map(SBFFormationTurn::new)
+                          .collect(Collectors.toList());
 
             turns.sort(Comparator.comparing(t -> game().getPlayer(t.playerId()).getInitiative()));
 
         } else {
             // As a fallback, provide unsorted turns
-            turns = game().getInGameObjects().stream()
-                    .filter(unit -> unit instanceof SBFFormation)
-                    .filter(unit -> ((SBFFormation) unit).isDeployed())
-                    .filter(unit -> ((SBFFormation) unit).isEligibleForPhase(phase))
-                    .map(InGameObject::getOwnerId)
-                    .map(SBFFormationTurn::new)
-                    .collect(Collectors.toList());
+            turns = game().getInGameObjects()
+                          .stream()
+                          .filter(unit -> unit instanceof SBFFormation)
+                          .filter(unit -> ((SBFFormation) unit).isDeployed())
+                          .filter(unit -> ((SBFFormation) unit).isEligibleForPhase(phase))
+                          .map(InGameObject::getOwnerId)
+                          .map(SBFFormationTurn::new)
+                          .collect(Collectors.toList());
 
             // Now, assemble formations and sort by initiative and relative formation count
-            Map<Integer, Long> unitCountsByPlayer = game().getInGameObjects().stream()
-                    .filter(unit -> unit instanceof SBFFormation)
-                    .filter(unit -> ((SBFFormation) unit).isDeployed())
-                    .filter(unit -> ((SBFFormation) unit).isEligibleForPhase(phase))
-                    .collect(Collectors.groupingBy(InGameObject::getOwnerId, Collectors.counting()));
+            Map<Integer, Long> unitCountsByPlayer = game().getInGameObjects()
+                                                          .stream()
+                                                          .filter(unit -> unit instanceof SBFFormation)
+                                                          .filter(unit -> ((SBFFormation) unit).isDeployed())
+                                                          .filter(unit -> ((SBFFormation) unit).isEligibleForPhase(phase))
+                                                          .collect(Collectors.groupingBy(InGameObject::getOwnerId,
+                                                                Collectors.counting()));
 
             if (!unitCountsByPlayer.isEmpty()) {
                 final long lowestUnitCount = Collections.min(unitCountsByPlayer.values());
 
-                int playerWithLowestUnitCount = unitCountsByPlayer.entrySet().stream()
-                        .filter(e -> e.getValue() == lowestUnitCount)
-                        .map(Map.Entry::getKey)
-                        .findAny().orElse(Player.PLAYER_NONE);
+                int playerWithLowestUnitCount = unitCountsByPlayer.entrySet()
+                                                      .stream()
+                                                      .filter(e -> e.getValue() == lowestUnitCount)
+                                                      .map(Map.Entry::getKey)
+                                                      .findAny()
+                                                      .orElse(Player.PLAYER_NONE);
 
                 List<Integer> playersByInitiative = new ArrayList<>(unitCountsByPlayer.keySet());
                 playersByInitiative.sort(Comparator.comparing(id -> game().getPlayer(id).getInitiative()));
 
                 if ((playerWithLowestUnitCount != Player.PLAYER_NONE) && (lowestUnitCount > 0)) {
                     List<SBFTurn> sortedTurns = new ArrayList<>();
-                    for (int initCycle = 0; initCycle < lowestUnitCount; initCycle++) {
+
+                    for (long initCycle = 0; initCycle < lowestUnitCount; initCycle++) {
                         long currentLowestUnitCount = Collections.min(unitCountsByPlayer.values());
+
                         for (int playerId : playersByInitiative) {
                             long unitsToMove = unitCountsByPlayer.get(playerId) / currentLowestUnitCount;
                             long remainingUnits = unitCountsByPlayer.get(playerId);
                             unitsToMove = Math.min(unitsToMove, remainingUnits);
-                            for (int i = 0; i < unitsToMove; i++) {
+
+                            for (long i = 0; i < unitsToMove; i++) {
                                 sortedTurns.add(new SBFFormationTurn(playerId));
                             }
+                            
                             unitCountsByPlayer.put(playerId, remainingUnits - unitsToMove);
                         }
                     }
@@ -101,14 +129,6 @@ public record SBFInitiativeHelper(SBFGameManager gameManager) implements SBFGame
                     turns.addAll(sortedTurns);
                 }
             }
-        }
-
-        if (gameManager.usesAdvancedInitiative()) {
-            //TODO ...
-        }
-
-        if (game().usesBattlefieldInt()) {
-            //TODO ...
         }
 
         game().setTurns(turns);
@@ -138,15 +158,13 @@ public record SBFInitiativeHelper(SBFGameManager gameManager) implements SBFGame
     private void writeFutureDeployment() {
         // remaining deployments
         Comparator<Deployable> comp = Comparator.comparingInt(Deployable::getDeployRound);
-//        comp = comp.thenComparingInt(InGameObject::getOwnerId);
-//        comp = comp.thenComparingInt(Entity::getStartingPos);
-//        List<Entity> ue = game().getEntitiesVector().stream().filter(e -> e.getDeployRound() > game().getCurrentRound()).sorted(comp).collect(Collectors.toList());
-        List<Deployable> futureDeployments = game().getInGameObjects().stream()
-                .filter(unit -> unit instanceof Deployable)
-                .map(unit -> (Deployable) unit)
-                .filter(unit -> !unit.isDeployed())
-                .sorted(comp)
-                .collect(Collectors.toList());
+        List<Deployable> futureDeployments = game().getInGameObjects()
+                                                   .stream()
+                                                   .filter(unit -> unit instanceof Deployable)
+                                                   .map(unit -> (Deployable) unit)
+                                                   .filter(unit -> !unit.isDeployed())
+                                                   .sorted(comp)
+                                                   .toList();
 
         if (!futureDeployments.isEmpty()) {
             addReport(new SBFPublicReportEntry(1060));
@@ -162,10 +180,6 @@ public record SBFInitiativeHelper(SBFGameManager gameManager) implements SBFGame
                 r.add(((InGameObject) deployable).generalName());
                 r.add("1");
                 r.add("2");
-                //TODO
-//                r.addDesc(entity);
-//                String s = IStartingPositions.START_LOCATION_NAMES[entity.getStartingPos()];
-//                r.add(s);
                 addReport(r);
             }
             addReport(new SBFPublicReportEntry(1210).newLines(2));
@@ -200,15 +214,16 @@ public record SBFInitiativeHelper(SBFGameManager gameManager) implements SBFGame
                 r.add(team.getInitiative().toString());
                 addReport(r);
                 for (Player player : team.nonObserverPlayers()) {
-                    addReport(new SBFPublicReportEntry(1015).indent().add(player.getName()).add(player.getInitiative().toString()));
+                    addReport(new SBFPublicReportEntry(1015).indent()
+                                    .add(player.getName())
+                                    .add(player.getInitiative().toString()));
                 }
             }
         }
     }
 
     private void writeHeader() {
-        if (game().getLastPhase().isDeployment() || game().isDeploymentComplete()
-                || !game().shouldDeployThisRound()) {
+        if (game().getLastPhase().isDeployment() || game().isDeploymentComplete() || !game().shouldDeployThisRound()) {
             addReport(new SBFReportHeader(1000).add(game().getCurrentRound()));
         } else {
             if (game().getCurrentRound() == 0) {
